# pcsxjs

./: .gitignore  Makefile  README.md  buildall_asmjs  buildall_clang  buildall_gl  buildall_wasm  buildall_ww  buildall_ww1  buildall_ww2  index.html  pcsx.css  pcsx_ui.js  pcsx_worker.js  pcsx_worker.wasm  pcsx_ww.html  pcsx_ww.js  shell.html  shell_ww.html  update_ghpages  worker_funcs.js
gui/: Gtk2Gui.c  Linux.h  LnxMain.c  Plugin.c  nopic.h  workerMain.c  wwGUI.c  wwGUI.cc
gui/.deps/: AboutDlg.Po  Cheat.Po  ConfDlg.Po  Config.Po  DebugMemory.Po  Gtk2Gui.Po  LnxMain.Po  MemcardDlg.Po  Plugin.Po
include/: config.h  config.h.in
libpcsxcore/: cdriso.c  debug.h  decode_xa.c  disr3000a.c  misc.c  plugins.c  plugins.h  psxbios.c  psxcommon.c  psxcommon.h  psxcounters.c  psxhle.c  psxhw.c  psxinterpreter.c  psxmem.c  psxmem.h  r3000a.c  r3000a.h  sio.c  sjisfont.h  system.h
libpcsxcore/.deps/: cdriso.Po  cdrom.Po  cheat.Po  debug.Po  decode_xa.Po  disr3000a.Po  gte.Po  iR3000A-64.Po  ix86-64.Po  ix86_3dnow.Po  ix86_cpudetect.Po  ix86_fpu.Po  ix86_mmx.Po  ix86_sse.Po  mdec.Po  misc.Po  plugins.Po  ppf.Po  psxbios.Po  psxcommon.Po  psxcounters.Po  psxdma.Po  psxhle.Po  psxhw.Po  psxinterpreter.Po  psxmem.Po  r3000a.Po  sio.Po  socket.Po  spu.Po
plugins/dfOpenGL/: GPU.c  Makefile  Makefile.am  Makefile.in  cfg.c  cfgDFOpenGL
plugins/dfOpenGL/gpucfg-0.1df/: dfopengl.glade2
plugins/dfsound/: Makefile  Makefile.in  cfg.c  externals.h  registers.c  sdl.c  spu.c  spu_worker.c  worker.c
plugins/dfxvideo/: Makefile  Makefile.in  cfg.c  cfg.h  draw.c  draw_null.c  fps.c  (+9 more)
(+25 files in other folders)
